--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -41,7 +41,7 @@
         android:layout_width="270dp"
         android:layout_height="57dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="144dp"
+        android:layout_marginTop="58dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="@color/colorNeutralWhite"
         android:bottomLeftRadius="10dp"
@@ -54,14 +54,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/LogoView" />
 
     <Button
         android:id="@+id/DoctorSetBtn"
         android:layout_width="270dp"
         android:layout_height="57dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="214dp"
+        android:layout_marginTop="52dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="@color/colorNeutralWhite"
         android:bottomLeftRadius="10dp"
@@ -74,19 +74,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/ProfileSetBtn" />
 
     <Button
-        android:id="@+id/AddDoctorBtn"
+        android:id="@+id/DeleteAccBtn"
         android:layout_width="270dp"
         android:layout_height="57dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="284dp"
+        android:layout_marginTop="52dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="@color/colorNeutralWhite"
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp"
-        android:text="Add Doctor"
+        android:text="Delete Account"
         android:textAllCaps="false"
         android:textSize="20dp"
         android:topLeftRadius="10dp"
@@ -94,19 +94,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/DoctorSetBtn" />
 
     <Button
-        android:id="@+id/AlertsStnBtn"
+        android:id="@+id/LogOutBtn"
         android:layout_width="270dp"
         android:layout_height="57dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="354dp"
+        android:layout_marginTop="52dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="@color/colorNeutralWhite"
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp"
-        android:text="Alerts"
+        android:text="Log Out"
         android:textAllCaps="false"
         android:textSize="20dp"
         android:topLeftRadius="10dp"
@@ -114,14 +114,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/DeleteAccBtn" />
 
     <Button
         android:id="@+id/BacktoMainBtn"
         android:layout_width="160dp"
         android:layout_height="57dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="630dp"
+        android:layout_marginTop="52dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="@color/colorPrimaryDark"
         android:bottomLeftRadius="10dp"
@@ -134,7 +134,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/LogOutBtn"
         />
 
 
