--- a/app/src/main/res/layout/signup2.xml
+++ b/app/src/main/res/layout/signup2.xml
@@ -37,7 +37,7 @@
         app:layout_constraintVertical_bias="0.077" />
 
     <EditText
-        android:id="@+id/DiaTypeField"
+        android:id="@+id/diatype"
         android:layout_width="270dp"
         android:layout_height="50dp"
         android:layout_marginTop="48dp"
@@ -58,7 +58,7 @@
         tools:ignore="MissingConstraints" />
 
     <EditText
-        android:id="@+id/InsTypeField"
+        android:id="@+id/instype"
         android:layout_width="270dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
@@ -74,12 +74,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/DiaTypeField"
+        app:layout_constraintTop_toBottomOf="@+id/diatype"
         app:layout_constraintVertical_bias="0.014"
         tools:ignore="MissingConstraints" />
 
     <EditText
-        android:id="@+id/InsAdmField"
+        android:id="@+id/insadm"
         android:layout_width="270dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
@@ -95,12 +95,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/InsTypeField"
+        app:layout_constraintTop_toBottomOf="@+id/instype"
         app:layout_constraintVertical_bias="0.027"
         tools:ignore="MissingConstraints" />
 
     <EditText
-        android:id="@+id/DocEmailField"
+        android:id="@+id/docemail"
         android:layout_width="270dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
@@ -116,12 +116,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/InsAdmField"
+        app:layout_constraintTop_toBottomOf="@+id/insadm"
         app:layout_constraintVertical_bias="0.056"
         tools:ignore="MissingConstraints" />
 
     <EditText
-        android:id="@+id/DocPhoneField"
+        android:id="@+id/docphone"
         android:layout_width="270dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
@@ -137,13 +137,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/DocEmailField"
+        app:layout_constraintTop_toBottomOf="@+id/docemail"
         app:layout_constraintVertical_bias="0.056"
         tools:ignore="MissingConstraints" />
 
 
     <EditText
-        android:id="@+id/DocNameField"
+        android:id="@+id/docname"
         android:layout_width="270dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
@@ -159,7 +159,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/DocPhoneField"
+        app:layout_constraintTop_toBottomOf="@+id/docphone"
         app:layout_constraintVertical_bias="0.056"
         tools:ignore="MissingConstraints" />
 
