--- a/app/src/main/res/layout/doctor_details.xml
+++ b/app/src/main/res/layout/doctor_details.xml
@@ -80,7 +80,8 @@
                     android:padding="15dp"
                     android:textColor="#000000"
                     android:textColorHighlight="#000000"
-                    android:textColorHint="#000000" />
+                    android:textColorHint="#000000"
+                    android:layout_marginTop="5dp"/>
                 <Space
                     android:layout_width="match_parent"
                     android:layout_height="24dp" />
@@ -103,7 +104,8 @@
                     android:padding="15dp"
                     android:textColor="#000000"
                     android:textColorHighlight="#000000"
-                    android:textColorHint="#000000" />
+                    android:textColorHint="#000000"
+                    android:layout_marginTop="5dp"/>
                 <Space
                     android:layout_width="match_parent"
                     android:layout_height="24dp" />
@@ -126,7 +128,8 @@
                     android:padding="15dp"
                     android:textColor="#000000"
                     android:textColorHighlight="#000000"
-                    android:textColorHint="#000000" />
+                    android:textColorHint="#000000"
+                    android:layout_marginTop="5dp" />
 
 
 
