--- a/app/src/main/res/layout/extranotes.xml
+++ b/app/src/main/res/layout/extranotes.xml
@@ -86,7 +86,7 @@
         android:layout_marginTop="48dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="@color/colorNeutralWhite"
-        android:hint="time"
+        android:hint="Time"
         android:padding="15dp"
         android:textAlignment="center"
         android:textColor="#000000"
@@ -102,7 +102,7 @@
 
     <Button
         android:id="@+id/cancelBtn"
-        android:layout_width="270dp"
+        android:layout_width="180dp"
         android:layout_height="50dp"
         android:layout_centerHorizontal="true"
         android:background="@drawable/roundbutton"
@@ -122,7 +122,7 @@
 
     <Button
         android:id="@+id/saveBtn"
-        android:layout_width="270dp"
+        android:layout_width="180dp"
         android:layout_height="50dp"
         android:layout_centerHorizontal="true"
         android:background="@drawable/roundbutton"
