--- a/app/src/main/res/layout/signup2.xml
+++ b/app/src/main/res/layout/signup2.xml
@@ -36,26 +36,25 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.077" />
 
-    <EditText
-        android:id="@+id/DiaTypeField"
+    <Spinner
+        android:id="@+id/TypeDiaSpinner"
         android:layout_width="270dp"
         android:layout_height="50dp"
         android:layout_marginTop="48dp"
-        android:background="@drawable/roundbutton"
-        android:backgroundTint="@color/colorNeutralWhite"
-        android:hint="Type of Diabetes"
-        android:inputType="text"
-        android:padding="15dp"
-        android:textColor="#000000"
-        android:textColorHighlight="#000000"
-        android:textColorHint="#000000"
+        android:layout_centerHorizontal="true"
         app:layout_constraintBottom_toTopOf="@+id/continueBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Title"
         app:layout_constraintVertical_bias="0.017"
-        tools:ignore="MissingConstraints" />
+        android:background="@drawable/roundbutton"
+        android:backgroundTint="@color/colorNeutralWhite"
+        android:bottomLeftRadius="10dp"
+        android:bottomRightRadius="10dp"
+        android:textSize="18dp"
+        android:topLeftRadius="10dp"
+        android:topRightRadius="10dp"/>
 
     <EditText
         android:id="@+id/InsTypeField"
@@ -74,30 +73,31 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/DiaTypeField"
+        app:layout_constraintTop_toBottomOf="@id/TypeDiaSpinner"
         app:layout_constraintVertical_bias="0.014"
         tools:ignore="MissingConstraints" />
 
-    <EditText
-        android:id="@+id/InsAdmField"
+    <Spinner
+        android:id="@+id/InsAdmSpinner"
         android:layout_width="270dp"
         android:layout_height="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
         android:background="@drawable/roundbutton"
         android:backgroundTint="@color/colorNeutralWhite"
-        android:hint="Insulin Administration"
-        android:inputType="text"
-        android:padding="15dp"
-        android:textColor="#000000"
-        android:textColorHighlight="#000000"
-        android:textColorHint="#000000"
+        android:bottomLeftRadius="10dp"
+        android:bottomRightRadius="10dp"
+        android:textSize="18dp"
+        android:topLeftRadius="10dp"
+        android:topRightRadius="10dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintBottom_toTopOf="@+id/continueBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/InsTypeField"
         app:layout_constraintVertical_bias="0.027"
-        tools:ignore="MissingConstraints" />
+
+        />
 
     <EditText
         android:id="@+id/DocEmailField"
@@ -116,7 +116,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/InsAdmField"
+        app:layout_constraintTop_toBottomOf="@+id/InsAdmSpinner"
         app:layout_constraintVertical_bias="0.056"
         tools:ignore="MissingConstraints" />
 
@@ -202,6 +202,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.891" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
