--- a/app/src/main/res/layout/signup2.xml
+++ b/app/src/main/res/layout/signup2.xml
@@ -52,7 +52,7 @@
         android:backgroundTint="@color/colorNeutralWhite"
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"/>
 
@@ -66,6 +66,7 @@
         android:hint="Type of Insulin"
         android:inputType="text"
         android:padding="15dp"
+        android:textSize="16sp"
         android:textColor="#000000"
         android:textColorHighlight="#000000"
         android:textColorHint="#000000"
@@ -86,7 +87,7 @@
         android:backgroundTint="@color/colorNeutralWhite"
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         android:layout_marginTop="20dp"
@@ -109,6 +110,7 @@
         android:hint="Email of Doctor"
         android:inputType="textEmailAddress"
         android:padding="15dp"
+        android:textSize="16sp"
         android:textColor="#000000"
         android:textColorHighlight="#000000"
         android:textColorHint="#000000"
@@ -130,6 +132,7 @@
         android:hint="Phone Number of Doctor"
         android:inputType="phone"
         android:padding="15dp"
+        android:textSize="16sp"
         android:textColor="#000000"
         android:textColorHighlight="#000000"
         android:textColorHint="#000000"
@@ -152,6 +155,7 @@
         android:hint="Name of Doctor"
         android:inputType="textPersonName"
         android:padding="15dp"
+        android:textSize="16sp"
         android:textColor="#000000"
         android:textColorHighlight="#000000"
         android:textColorHint="#000000"
@@ -173,7 +177,7 @@
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp"
         android:text="Continue"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -194,7 +198,7 @@
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp"
         android:text="Back"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
