--- a/app/src/main/res/layout/signup2.xml
+++ b/app/src/main/res/layout/signup2.xml
@@ -36,26 +36,25 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.077" />
 
-    <EditText
-        android:id="@+id/diatype"
+    <Spinner
+        android:id="@+id/TypeDiaSpinner"
         android:layout_width="270dp"
         android:layout_height="50dp"
         android:layout_marginTop="48dp"
-        android:background="@drawable/roundbutton"
-        android:backgroundTint="@color/colorNeutralWhite"
-        android:hint="Type of Diabetes"
-        android:inputType="text"
-        android:padding="15dp"
-        android:textColor="#000000"
-        android:textColorHighlight="#000000"
-        android:textColorHint="#000000"
+        android:layout_centerHorizontal="true"
         app:layout_constraintBottom_toTopOf="@+id/continueBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Title"
         app:layout_constraintVertical_bias="0.017"
-        tools:ignore="MissingConstraints" />
+        android:background="@drawable/roundbutton"
+        android:backgroundTint="@color/colorNeutralWhite"
+        android:bottomLeftRadius="10dp"
+        android:bottomRightRadius="10dp"
+        android:textSize="18sp"
+        android:topLeftRadius="10dp"
+        android:topRightRadius="10dp"/>
 
     <EditText
         android:id="@+id/instype"
@@ -67,6 +66,7 @@
         android:hint="Type of Insulin"
         android:inputType="text"
         android:padding="15dp"
+        android:textSize="16sp"
         android:textColor="#000000"
         android:textColorHighlight="#000000"
         android:textColorHint="#000000"
@@ -74,30 +74,29 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/diatype"
+        app:layout_constraintTop_toBottomOf="@+id/TypeDiaSpinner"
         app:layout_constraintVertical_bias="0.014"
         tools:ignore="MissingConstraints" />
 
-    <EditText
-        android:id="@+id/insadm"
+    <Spinner
+        android:id="@+id/InsAdmSpinner"
         android:layout_width="270dp"
         android:layout_height="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
         android:background="@drawable/roundbutton"
         android:backgroundTint="@color/colorNeutralWhite"
-        android:hint="Insulin Administration"
-        android:inputType="text"
-        android:padding="15dp"
-        android:textColor="#000000"
-        android:textColorHighlight="#000000"
-        android:textColorHint="#000000"
+        android:bottomLeftRadius="10dp"
+        android:bottomRightRadius="10dp"
+        android:textSize="18sp"
+        android:topLeftRadius="10dp"
+        android:topRightRadius="10dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintBottom_toTopOf="@+id/continueBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/instype"
-        app:layout_constraintVertical_bias="0.027"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintVertical_bias="0.027" />
 
     <EditText
         android:id="@+id/docemail"
@@ -109,6 +108,7 @@
         android:hint="Email of Doctor"
         android:inputType="textEmailAddress"
         android:padding="15dp"
+        android:textSize="16sp"
         android:textColor="#000000"
         android:textColorHighlight="#000000"
         android:textColorHint="#000000"
@@ -116,7 +116,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/insadm"
+        app:layout_constraintTop_toBottomOf="@+id/InsAdmSpinner"
         app:layout_constraintVertical_bias="0.056"
         tools:ignore="MissingConstraints" />
 
@@ -130,6 +130,7 @@
         android:hint="Phone Number of Doctor"
         android:inputType="phone"
         android:padding="15dp"
+        android:textSize="16sp"
         android:textColor="#000000"
         android:textColorHighlight="#000000"
         android:textColorHint="#000000"
@@ -152,6 +153,7 @@
         android:hint="Name of Doctor"
         android:inputType="textPersonName"
         android:padding="15dp"
+        android:textSize="16sp"
         android:textColor="#000000"
         android:textColorHighlight="#000000"
         android:textColorHint="#000000"
@@ -173,7 +175,7 @@
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp"
         android:text="Continue"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -194,7 +196,7 @@
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp"
         android:text="Back"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
