Food log history is now finished

--- a/app/src/main/res/layout/food_recycler.xml
+++ b/app/src/main/res/layout/food_recycler.xml
@@ -13,7 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginVertical="16dp"
+        android:layout_marginVertical="8dp"
+        android:layout_marginEnd = "8dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -49,14 +50,14 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Blood Sugar: "
+                android:text="Meal: "
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="@color/colorNeutralBlack"
                 android:textAlignment="center" />
 
             <TextView
-                android:id="@+id/bloodSugarView"
+                android:id="@+id/mealView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Value"
@@ -75,17 +76,67 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Eaten the last 2h: "
+                android:text="Carbohydrates: "
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="@color/colorNeutralBlack"
                 android:textAlignment="center" />
 
             <TextView
-                android:id="@+id/eatBoolView"
+                android:id="@+id/carbView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Boolean"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@color/colorNeutralBlack"
+                android:textAlignment="center" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Sugars: "
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@color/colorNeutralBlack"
+                android:textAlignment="center" />
+
+            <TextView
+                android:id="@+id/sugarView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="value"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@color/colorNeutralBlack"
+                android:textAlignment="center" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Calories: "
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@color/colorNeutralBlack"
+                android:textAlignment="center" />
+
+            <TextView
+                android:id="@+id/calView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Value"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="@color/colorNeutralBlack"
