--- a/app/src/main/res/layout/bloodsugar.xml
+++ b/app/src/main/res/layout/bloodsugar.xml
@@ -104,6 +104,7 @@
             android:backgroundTint="@color/colorNeutralWhite"
             android:hint="Date"
             android:padding="15dp"
+            android:textAlignment="center"
             android:textColor="@color/colorTextBlack"
             android:textColorHighlight="@color/colorTextBlack"
             android:textColorHint="@color/colorTextBlack"
@@ -121,6 +122,7 @@
             android:backgroundTint="@color/colorNeutralWhite"
             android:hint="Time"
             android:padding="15dp"
+            android:textAlignment="center"
             android:textColor="@color/colorTextBlack"
             android:textColorHighlight="@color/colorTextBlack"
             android:textColorHint="@color/colorTextBlack"
