--- a/app/src/main/res/layout/exercise_log.xml
+++ b/app/src/main/res/layout/exercise_log.xml
@@ -142,6 +142,7 @@
             android:backgroundTint="@color/colorNeutralWhite"
             android:hint="Date"
             android:padding="15dp"
+            android:textAlignment="center"
             android:textColor="@color/colorTextBlack"
             android:textColorHighlight="@color/colorTextBlack"
             android:textColorHint="@color/colorTextBlack"
@@ -159,6 +160,7 @@
             android:backgroundTint="@color/colorNeutralWhite"
             android:hint="Time"
             android:padding="15dp"
+            android:textAlignment="center"
             android:textColor="@color/colorTextBlack"
             android:textColorHighlight="@color/colorTextBlack"
             android:textColorHint="@color/colorTextBlack"
